--- a/style.css
+++ b/style.css
@@ -33,10 +33,6 @@ footer {
   display: flex;
 }
 
-a {
-  text-decoration: none;
-}
-
 img {
   margin: auto;
 }
@@ -47,4 +43,9 @@ img {
 
 .mainimg {
   text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
